# mcp-google-suite

./: .gitignore  CLAUDE.md  Dockerfile  README.md  cloudbuild-gsuite.yaml  cloudrun-deploy.yaml  config.json  mcp_server_tasks.md  pyproject.toml
.cursor/rules/: .cursorrules  project-rules.mdc
.github/workflows/: ci.yml  release.yml
src/mcp_google_suite/: __init__.py  __main__.py  base_service.py  config.py  launcher.py  mcp_client.py  server.py  sse_server.py  stdio_server.py  web_app.py  websocket_server.py
src/mcp_google_suite/auth/: __init__.py  google_auth.py
src/mcp_google_suite/docs/: __init__.py  service.py
src/mcp_google_suite/drive/: service.py
src/mcp_google_suite/sheets/: __init__.py  service.py
tests/: test_server.py
