[project]
name = "mcp-google-suite"
version = "0.1.0"
description = "MCP server for Google Workspace (Drive, Docs, and Sheets) operations"
authors = [
    {name = "Lasius", email = "wordlord@lasius.io"},
]
dependencies = [
    "mcp==1.1.3",
    "google-auth>=2.28.1",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.120.0",
    "pydantic>=2.6.3",
    "tabulate>=0.9.0",
]
requires-python = ">=3.11"

[project.scripts]
mcp-google = "mcp_google_suite.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "B", "I"] 